[gd_scene load_steps=13 format=1]

[ext_resource path="res://menu.gd" type="Script" id=1]
[ext_resource path="res://assets/img/logo-Malefico/logo_resized.png" type="Texture" id=2]
[ext_resource path="res://assets/buttons/jugar_button.png" type="Texture" id=3]
[ext_resource path="res://assets/buttons/jugar_button_press.png" type="Texture" id=4]
[ext_resource path="res://assets/buttons/jugar_button.pbm" type="BitMap" id=5]
[ext_resource path="res://assets/buttons/acerca_de_button.png" type="Texture" id=6]
[ext_resource path="res://assets/buttons/acerca_de_button_press.png" type="Texture" id=7]
[ext_resource path="res://assets/buttons/acerca_de_button.pbm" type="BitMap" id=8]
[ext_resource path="res://assets/buttons/salir_button.png" type="Texture" id=9]
[ext_resource path="res://assets/buttons/salir_button_press.png" type="Texture" id=10]
[ext_resource path="res://assets/buttons/salir_button.pbm" type="BitMap" id=11]
[ext_resource path="res://assets/img/fondo_juego.png" type="Texture" id=12]

[node name="menu" type="HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1.0
margin/top = 1.0
margin/right = 1281.0
margin/bottom = 721.0
alignment = 0
script/script = ExtResource( 1 )

[node name="spacer" type="Control" parent="."]

rect/min_size = Vector2( 250, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 250.0
margin/bottom = 746.0

[node name="CenterContainer" type="CenterContainer" parent="."]

rect/min_size = Vector2( 680, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 254.0
margin/top = 0.0
margin/right = 1004.0
margin/bottom = 746.0
use_top_left = false

[node name="title screen" type="VBoxContainer" parent="CenterContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 750.0
margin/bottom = 746.0
alignment = 0

[node name="spacer4" type="Control" parent="CenterContainer/title screen"]

rect/min_size = Vector2( 0, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 750.0
margin/bottom = 40.0

[node name="emblem" type="TextureFrame" parent="CenterContainer/title screen"]

rect/min_size = Vector2( 750, 300 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 44.0
margin/right = 750.0
margin/bottom = 361.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="spacer2" type="Control" parent="CenterContainer/title screen"]

rect/min_size = Vector2( 0, 25 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 365.0
margin/right = 750.0
margin/bottom = 390.0

[node name="buttons" type="VBoxContainer" parent="CenterContainer/title screen"]

rect/min_size = Vector2( 200, 300 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 254.0
margin/top = 394.0
margin/right = 496.0
margin/bottom = 746.0
alignment = 0
__meta__ = {
"_edit_group_": true
}

[node name="jugar" type="TextureButton" parent="CenterContainer/title screen/buttons"]

rect/min_size = Vector2( 0, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 48.0
margin/top = 0.0
margin/right = 194.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
textures/click_mask = ExtResource( 5 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="acerca" type="TextureButton" parent="CenterContainer/title screen/buttons"]

rect/min_size = Vector2( 0, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 0.0
margin/top = 104.0
margin/right = 242.0
margin/bottom = 204.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 7 )
textures/click_mask = ExtResource( 8 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="salir" type="TextureButton" parent="CenterContainer/title screen/buttons"]

rect/min_size = Vector2( 0, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 64.0
margin/top = 208.0
margin/right = 177.0
margin/bottom = 308.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 9 )
textures/pressed = ExtResource( 10 )
textures/click_mask = ExtResource( 11 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="spacer3" type="Control" parent="CenterContainer/title screen/buttons"]

rect/min_size = Vector2( 0, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 312.0
margin/right = 242.0
margin/bottom = 352.0

[node name="expander" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 1008.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 746.0

[node name="background" type="Sprite" parent="."]

visibility/behind_parent = true
visibility/light_mask = 528947
transform/pos = Vector2( -0.0476494, -1.50838 )
transform/scale = Vector2( 1.70911, 1.47005 )
texture = ExtResource( 12 )
centered = false

[connection signal="pressed" from="CenterContainer/title screen/buttons/jugar" to="." method="_on_jugar_pressed"]

[connection signal="pressed" from="CenterContainer/title screen/buttons/acerca" to="." method="_on_acerca_pressed"]

[connection signal="pressed" from="CenterContainer/title screen/buttons/salir" to="." method="_on_salir_pressed"]


